prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_class_literal.nut
// EXPECTED: compile-time error - class literal assigned to string variable
local x: string = class {
    a = 1
    b = 2
}
return x
